Corrects spacing of footer links

--- a/public/main.css
+++ b/public/main.css
@@ -90,12 +90,14 @@ body {
   font-size: 1em;
 }
 
-/*.footer-links {
-  text-align: center;
-}*/
+.footer-links {
+  padding: 0.5em 0em;
+}
 
 /*Check what's neccessary*/
 .footer-links__link {
+  font-size: 0.8em;
+  padding: 0em 2.5em;
   text-decoration: underline;
   color: black;
 }
